--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,14 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #f0f0f0;
+
 }
 
 #root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
+  color: #213547;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
